# bazel_python_oci_example

./: .bazelrc  .gitignore  .workspace_tag  LICENSE  MODULE.bazel  README.md
app/: BUILD.bazel  hello_world.py
container_app/: BUILD.bazel  cli.py  defs.bzl  pydeps_proxy.bzl
containers/: BUILD.bazel  cli.py  containers.bzl  extensions.bzl
demo/: BUILD.bazel  greeter.py  hello_world.py
democc/: BUILD.bazel  hello.cc
workspace_tag/: BUILD.bazel  extensions.bzl  init.py
