bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    image = "gcr.io/distroless/static-debian12",
    platforms = ["linux/amd64"],
    tag = "latest",
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64")

img = use_extension("//containers:extensions.bzl", "image_tag_ext")
use_repo(img, "image_tag")
